<resources>
    <string name="app_name">GOT</string>
    <string name="start_point">Punkt początkowy</string>
    <string name="end_point">Punkt końcowy</string>
    <string name="search">Szukaj</string>
    <string name="search_route">Szukaj trasy</string>
    <string name="trips">Moje wycieczki</string>
    <string name="badges">Moje odznaki</string>
    <string name="achievements">Moje osiągnięcia</string>
    <string name="details">Szczegóły</string>
    <string name="summary">Podsumowanie</string>
    <!--    <string name=""></string>-->

    <string name="select_mountain_range">-- Wybierz łańcuch górski --</string>
    <string name="select_mountain_chain">-- Wybierz pasmo górskie --</string>
    <string name="press_route">Przytrzymaj wybraną trasę by dodać ją do Twoich wycieczek</string>

    <string name="points">Punkty</string>
    <string name="length">Odległość</string>
    <string name="time">Czas</string>
    <string name="ups">Podejść</string>
    <string name="downs">Zejść</string>
    <string name="name">Nazwa</string>
    <string name="height">Wysokość</string>
    <string name="dash">" - "</string>
    <string name="date">Data</string>
    <string name="my_trips">Moje wycieczki</string>
    <string name="no_trips">Nie dodałeś jeszcze żadnych wycieczek. Aby to zrobić, wybierz opcję "Szukaj trasy" i przytrzymaj długo wybraną trasę.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
