<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mountain6ab"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_search_route"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_route"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_trips"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/btn_trips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trips"
        app:layout_constraintBottom_toTopOf="@+id/btn_badges"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_search_route" />

    <Button
        android:id="@+id/btn_badges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/badges"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_trips" />

</androidx.constraintlayout.widget.ConstraintLayout>