<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rv_row_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground">

    <TextView
        android:id="@+id/tv_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/length"
        android:textColor="@color/colorDarkGradient"
        app:layout_constraintBottom_toBottomOf="@+id/tv_points"
        app:layout_constraintEnd_toStartOf="@+id/tv_time"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_points"
        app:layout_constraintTop_toTopOf="@+id/tv_points" />

    <TextView
        android:id="@+id/tv_ups"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ups"
        android:textColor="@color/colorDarkGradient"
        app:layout_constraintBottom_toBottomOf="@+id/tv_points"
        app:layout_constraintEnd_toStartOf="@+id/tv_downs"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_time"
        app:layout_constraintTop_toTopOf="@+id/tv_time" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textColor="@color/colorDarkGradient"
        app:layout_constraintBottom_toTopOf="@+id/tv_time_val"
        app:layout_constraintEnd_toStartOf="@+id/tv_ups"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_length"
        app:layout_constraintTop_toTopOf="@+id/tv_length" />

    <TextView
        android:id="@+id/tv_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/points"
        android:textColor="@color/colorDarkGradient"
        app:layout_constraintBottom_toBottomOf="@+id/tv_time"
        app:layout_constraintEnd_toStartOf="@+id/tv_length"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_downs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/downs"
        android:textColor="@color/colorDarkGradient"
        app:layout_constraintBottom_toBottomOf="@+id/tv_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_ups"
        app:layout_constraintTop_toTopOf="@+id/tv_ups" />

    <TextView
        android:id="@+id/tv_length_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/length"
        android:textSize="18sp"
        android:textColor="@color/colorDarkGradient"
        app:layout_constraintBottom_toTopOf="@id/rv_got_points"
        app:layout_constraintEnd_toEndOf="@+id/tv_length"
        app:layout_constraintStart_toStartOf="@+id/tv_length"
        app:layout_constraintTop_toBottomOf="@+id/tv_length" />

    <TextView
        android:id="@+id/tv_points_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/points"
        android:textSize="18sp"
        android:textColor="@color/colorDarkGradient"
        app:layout_constraintBottom_toTopOf="@id/rv_got_points"
        app:layout_constraintEnd_toEndOf="@+id/tv_points"
        app:layout_constraintStart_toStartOf="@+id/tv_points"
        app:layout_constraintTop_toBottomOf="@+id/tv_points" />

    <TextView
        android:id="@+id/tv_time_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="18sp"
        android:textColor="@color/colorDarkGradient"
        app:layout_constraintBottom_toTopOf="@id/rv_got_points"
        app:layout_constraintEnd_toEndOf="@+id/tv_time"
        app:layout_constraintStart_toStartOf="@+id/tv_time"
        app:layout_constraintTop_toBottomOf="@+id/tv_time" />

    <TextView
        android:id="@+id/tv_ups_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ups"
        android:textSize="18sp"
        android:textColor="@color/colorDarkGradient"
        app:layout_constraintBottom_toTopOf="@id/rv_got_points"
        app:layout_constraintEnd_toEndOf="@+id/tv_ups"
        app:layout_constraintStart_toStartOf="@+id/tv_ups"
        app:layout_constraintTop_toBottomOf="@+id/tv_ups" />

    <TextView
        android:id="@+id/tv_downs_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/downs"
        android:textSize="18sp"
        android:textColor="@color/colorDarkGradient"
        app:layout_constraintBottom_toTopOf="@id/rv_got_points"
        app:layout_constraintEnd_toEndOf="@+id/tv_downs"
        app:layout_constraintStart_toStartOf="@+id/tv_downs"
        app:layout_constraintTop_toBottomOf="@+id/tv_downs" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_got_points"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_downs_val" />

</androidx.constraintlayout.widget.ConstraintLayout>